<resources>
    <string name="app_name">Calculadora Geometrica</string>
    <string name="app_nameCuadrado">Cuadrado</string>
    <string name="app_nameCirculo">Circulo</string>
    <string name="app_nameRectangulo">Rectangulo</string>
    <string name="app_nameRombo">Rombo</string>
    <string name="app_nameTriangulos">Triangulos</string>
    <string name="app_nameResu">Resultados</string>
    <string name="app_nameSomos">Quienes Somos</string>
    <string name="TextView_Calculadora_Geometrica">Menu de selección de medidas</string>
    <string name="TextViewSelecccionTriangulos">Seleccione el tipo de medida</string>
    <string name="TextView_CalcularCuadrado">Calcular Cuadrado</string>
    <string name="TextView_CalcularRombo">Calcular Rombo</string>
    <string name="TextView_CalcularRectangulo">Calcular Rectangulo</string>
    <string name="TextView_CalcularTriangulos">Calcular Triangulos</string>
    <string name="TextView_CalcularCirculo">Calcular Circulo</string>
    <string name="TextViewResultado">Resultado</string>
    <string name="TextViewMenu">Seleccione el tipo de cálculo</string>
    <string name="RadioButtonCuadrado">Cuadrado</string>
    <string name="RadioButtonRectangulo">Rectangulo</string>
    <string name="RadioButtonCirculo">Circulo</string>
    <string name="RadioButtonTriangulos">Triangulos</string>
    <string name="RadioButtonEquilatero">Equilatero</string>
    <string name="RadioButtonIsosceles">Isósceles</string>
    <string name="RadioButtonEscaleno">Escaleno</string>
    <string name="RadioButtonRombo">Rombo</string>
    <string name="RadioButtonSomos">Quienes Somos</string>
    <string name="ButtonIrAseleccion">Ingresar Datos</string>
    <string name="ButtonVolver">Volver al menu de selección</string>
    <string name="ButtonCalcular">Calcular</string>
    <string name="EditTextLadoA">Valor</string>
    <string name="EditTextLadoB">Valor</string>
    <string name="EditTextLadoC">Valor</string>
    <string name="EditTextDiagonal">Diagonal</string>
    <string name="EditTextPerimetro">Perimetro</string>
    <string name="EditTextSemiPerimetro">SemiPerimetro</string>
    <string name="EditTextPerimetroLongitud">Perimetro (Longitud)</string>
    <string name="EditTextArea">Lado cm</string>

</resources>
