<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/geofigura"
    tools:context=".Triangulos">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:layout_marginBottom="50px"
        android:text="Seleccione el tipo de triángulo" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbEquilatero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/RadioButtonEquilatero" />

        <RadioButton
            android:id="@+id/rbIsosceles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/RadioButtonIsosceles" />

        <RadioButton
            android:id="@+id/rbEscaleno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/RadioButtonEscaleno" />


    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:layout_marginBottom="50px"
        android:text="Ingrese valores según corresponda" />

    <EditText
        android:id="@+id/etLadoA"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/EditTextLadoA"
        android:inputType="number"
        android:text=""
        tools:layout_editor_absoluteX="-4dp"
        tools:layout_editor_absoluteY="4dp" />

    <EditText
        android:id="@+id/etLadoB"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/EditTextLadoB"
        android:inputType="number"
        android:text=""
        tools:layout_editor_absoluteX="-4dp"
        tools:layout_editor_absoluteY="4dp" />

    <EditText
        android:id="@+id/etLadoC"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/EditTextLadoC"
        android:inputType="number"
        android:text=""
        tools:layout_editor_absoluteX="-4dp"
        tools:layout_editor_absoluteY="4dp" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100px"
        android:layout_marginBottom="50px"
        android:background="@color/colorVioleta"
        android:text="Enviar"
        android:textColor="@color/colorAmarillo" />


    <Button
        android:id="@+id/btnVolver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorVioleta"
        android:textColor="@color/colorAmarillo"
        android:text="@string/ButtonVolver" />

</LinearLayout>