<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/geofigura"
    android:orientation="vertical"
    tools:context=".Cuadrado">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:text="Ingrese lado del cuadrado" />

    <EditText
        android:id="@+id/etLadoA"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginBottom="100px"
        android:ems="10"
        android:hint="@string/EditTextLadoA"
        android:inputType="number"
        tools:layout_editor_absoluteX="-4dp"
        tools:layout_editor_absoluteY="4dp" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorVioleta"
        android:textColor="@color/colorAmarillo"
        android:text="@string/ButtonCalcular" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:background="@color/colorVioleta"
        android:text="@string/ButtonVolver"
        android:textColor="@color/colorAmarillo" />

</LinearLayout>